# qvix

./: .gitignore  README.md  pyproject.toml
configs/: alexnet.py  resnet101.py  resnet151.py  resnet18.py  resnet50.py
configs/lenet/: README.md  lenet.py
configs/resnet/: README.md  resnet101.py  resnet152.py  resnet34.py  resnet50.py
qvix/: __init__.py
qvix/builder/: __init__.py  build_dataloader.py  builder.py  dataloader_builder.py
qvix/datasets/: __init__.py  cifar.py  imagenet.py  mnist.py  tiny_imagenet.py  transforms.py
qvix/datasets/transforms/: __init__.py  transforms.py
qvix/models/: __init__.py  classifier.py  weight_initialization.py
qvix/models/backbones/: __init__.py  alexnet.py  base_backbone.py  lenet.py  resnet.py
qvix/models/losses/: __init__.py  losses.py
qvix/optimizers/: __init__.py  optim_transforms.py  optimizers.py  schedulers.py
qvix/registry/: __init__.py  registry.py
qvix/utils/: __init__.py  evaluate.py  logger.py  step.py  utils.py
tools/: train.py  train_temp.py
