[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "qvix"
version = "0.0.1"
description = "Computer Vision Deep Learning Library based on Equinox."
readme = "README.md"
requires-python ="~=3.9"
license = {file = "LICENSE"}
authors = [
  {name = "Byunghyun Kim", email = "kimbh.mail@gmail.com"},
]
keywords = ["equinox", "jax", "neural-networks", "deep-learning", "computer-vision"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
urls = {repository = "https://github.com/bhyun-kim/qvix"}
dependencies=[
    "equinox >= 0.11.2",
    "optax" >= 0.1.7,
    "torch >=1.7.1",
    "torchvision >=0.8.0",
    "gputil",
    "psutil"
]